add section preço

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./img/ico.png" type="image/x-icon">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- SEO -->
   <title>CodeSystem - Criação de Sites Profissionais</title>
   <meta name="description" content="Criamos sites profissionais para empresas que querem crescer no digital. Tenha presença online e atraia mais clientes.">
@@ -46,7 +46,7 @@
     </div>
 
     <div class="hero-img">
-      <img src="img/hero-img.png" alt="Criação de sites">
+      <img src="img/hero-img2.png" alt="Criação de sites">
     </div>
   </div>
 </section>
@@ -102,24 +102,135 @@
   </div>
 </section>
 
+<section class="precos" id="precos">
+  <div class="container">
+    
+    <h2>Planos que cabem no seu bolso</h2>
+    <p class="subtitulo">
+      Escolha o plano ideal para colocar sua empresa na internet e começar a atrair clientes hoje mesmo.
+    </p>
+
+    <div class="precos-grid">
+
+      <!-- PLANO 1 -->
+      <div class="plano">
+        <img src="./img/site-simples.svg" alt="Site simples">
+
+        <h3>Site Essencial</h3>
+        <p class="preco">R$ 199,00</p>
+
+        <p class="descricao">
+          Ideal para quem quer começar no digital. Um site simples, profissional e direto ao ponto para apresentar sua empresa e aparecer nas pesquisas da internet!
+        </p>
+
+        <ul>
+          <li>✔ 1 página</li>
+          <li>✔ Design padrão</li>
+          <li>✔ Responsivo</li>
+          <li>✔ Botão WhatsApp</li>
+        </ul>
+
+        <a href="#contato" class="btn">Quero esse*</a>
+        <small>*consulte prazo de entrega</small>
+      </div>
+
+      <!-- PLANO 2 -->
+      <div class="plano destaque">
+        <img src="./img/site-interativo.svg" alt="Site com animações">
+
+        <h3>Site Profissional</h3>
+        <p class="preco">R$ 299,00</p>
+
+        <p class="descricao">
+          Um site moderno, com mais detalhes da sua empresa que chamam atenção e passam mais credibilidade para seus clientes.
+        </p>
+
+        <ul>
+          <li>✔ Layout personalizado</li>
+          <li>✔ Animações suaves</li>
+          <li>✔ Melhor experiência</li>
+        </ul>
+
+        <a href="#contato" class="btn">Mais escolhido</a>
+        <small>*consulte prazo de entrega</small>
+      </div>
+
+      <!-- PLANO 3 -->
+      <div class="plano">
+        <img src="./img/site-premium.svg" alt="Site completo">
+
+        <h3>Site Premium</h3>
+        <p class="preco">R$ 499,00</p>
+
+        <p class="descricao">
+          Um site completo, com mais páginas, detalhes e estratégias para realmente destacar sua empresa no mercado.
+        </p>
+
+        <ul>
+          <li>✔ Múltiplas páginas</li>
+          <li>✔ Design exclusivo</li>
+          <li>✔ SEO básico</li>
+          <li>✔ Alta conversão</li>
+        </ul>
+
+        <a href="#contato" class="btn">Quero esse</a>
+        <small>*consulte prazo de entrega</small>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
 <!-- CONTATO -->
 <section id="contato" class="contato">
   <div class="container">
     <h2>Fale Conosco</h2>
 
-    <form>
-      <input type="text" placeholder="Seu nome" required>
-      <input type="email" placeholder="Seu email" required>
-      <textarea placeholder="Sua mensagem" required></textarea>
+    <form id="form-whatsapp">
+  <input type="text" id="nome" placeholder="Seu nome" required>
+  <input type="tel" id="telefone" placeholder="Seu whatsapp" required>
+  <textarea id="mensagem" placeholder="Sua mensagem" required></textarea>
 
-      <button type="submit">Enviar</button>
-    </form>
+  <button type="submit">Enviar</button>
+</form>
+  </div>
+</section>
+
+
+
+
+      <!-- INFO -->
+     <div class="info-contato">
+  <h3>Entre em contato</h3>
+
+  <div class="item">
+    <span>📞</span>
+    <p><a class="color-white" href="https://wa.me/5551994879614" target="_blank">(51) 9 9487-6914</a></p>
+  </div>
+
+  <div class="item">
+    <span>✉️</span>
+    <p ><a class="color-white" href="mailto:codesystemweb@gmail.com?subject=Orçamentobody=Gostaria de um orçamento para um site simples">codesystemweb@gmail.com</a></p>
+    
+  </div>
+
+  <div class="redes">
+    <h4>Redes sociais</h4>
+
+    <div class="social-links">
+      <a class="color-white" href="https://www.instagram.com/codesystemweb"><i  class="fa fa-instagram color-white" aria-hidden="true"></i> | @codesystemweb</a>
+      <a class="color-white" href="https://www.facebook.com/share/1CLyr2V8KS/"> <i class="fa fa-facebook color-white" aria-hidden="true"></i> | @codeSystem</a>
+    </div>
+  </div>
+</div>
+    </div>
   </div>
 </section>
 
 <!-- WHATSAPP -->
-<a href="https://wa.me/5599999999999" class="whatsapp" target="_blank">
-  💬
+<a href="https://wa.me/5551994879614" class="whatsapp" target="_blank">
+  <i class="fa fa-2x fa-whatsapp" aria-hidden="true"></i>
 </a>
 
 <footer>
