--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="#home">Início</a>
       <a href="#servicos">Serviços</a>
       <a href="#sobre">Sobre</a>
+      <a href="#precos">Preços</a>
       <a href="#contato">Contato</a>
     </nav>
 
