add section preço ajuste3

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <li>✔ Botão WhatsApp</li>
         </ul>
 
-        <a href="#contato" class="btn">Quero esse*</a>
+        <a href="https://wa.me/5551994879614?text=Olá, quero adquirir um site Essencial" class="btn">Quero esse*</a>
         <small>*consulte prazo de entrega</small>
       </div>
 
@@ -143,7 +143,7 @@
         <p class="preco">R$ 299,00</p>
 
         <p class="descricao">
-          Um site moderno, com mais detalhes da sua empresa que chamam atenção e passam mais credibilidade para seus clientes.
+          Um site moderno, com mais detalhes da sua empresa que chamam atenção e passam credibilidade para seus clientes.
         </p>
 
         <ul>
@@ -152,7 +152,7 @@
           <li>✔ Melhor experiência</li>
         </ul>
 
-        <a href="#contato" class="btn">Mais escolhido</a>
+        <a href="https://wa.me/5551994879614?text=Olá, quero adquirir um site Profissional"  class="btn">Mais escolhido</a>
         <small>*consulte prazo de entrega</small>
       </div>
 
@@ -174,7 +174,7 @@
           <li>✔ Alta conversão</li>
         </ul>
 
-        <a href="#contato" class="btn">Quero esse</a>
+        <a href="https://wa.me/5551994879614?text=Olá, quero adquirir um site Premium" class="btn">Quero esse</a>
         <small>*consulte prazo de entrega</small>
       </div>
 
