--- a/index.html
+++ b/index.html
@@ -3,14 +3,78 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./img/ico.png" type="image/x-icon">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- SEO -->
-  <title>CodeSystem - Criação de Sites Profissionais</title>
-  <meta name="description" content="Criamos sites profissionais para empresas que querem crescer no digital. Tenha presença online e atraia mais clientes.">
 
+  <!-- TITLE -->
+  <title>Criação de Sites Profissionais para Pequenas Empresas | CodeSystem</title>
+
+  <!-- META DESCRIPTION -->
+  <meta name="description" content="Criação de sites profissionais a partir de R$199. Desenvolvemos sites rápidos, modernos e otimizados para Google. Aumente seus clientes com a CodeSystem.">
+
+  <!-- KEYWORDS (não impacta muito hoje, mas ajuda) -->
+  <meta name="keywords" content="criação de sites, criação de sites baratos, site profissional, desenvolvimento web, sites para empresas, criação de sites para pequenos negócios, site responsivo, SEO">
+
+  <!-- AUTHOR -->
+  <meta name="author" content="CodeSystem">
+
+  <!-- ROBOTS -->
+  <meta name="robots" content="index, follow">
+
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://www.codesystemweb.com.br/">
+
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="./img/ico.png" type="image/x-icon">
+
+  <!-- OPEN GRAPH (Facebook, WhatsApp) -->
+  <meta property="og:title" content="Criação de Sites Profissionais | CodeSystem">
+  <meta property="og:description" content="Tenha um site profissional a partir de R$199 e aumente suas vendas.">
+  <meta property="og:image" content="https://www.codesystemweb.com.br/img/hero-img2.png">
+  <meta property="og:url" content="https://www.codesystemweb.com.br/">
+  <meta property="og:type" content="website">
+
+  <!-- TWITTER -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Criação de Sites Profissionais | CodeSystem">
+  <meta name="twitter:description" content="Sites modernos e profissionais para sua empresa crescer.">
+  <meta name="twitter:image" content="https://www.codesystemweb.com.br/img/hero-img2.png">
+
+  <!-- GEO TAGS -->
+  <meta name="geo.region" content="BR">
+  <meta name="geo.placename" content="Brasil">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- FONT AWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- PRECONNECT (performance) -->
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+
+  <!-- SCHEMA (SEO avançado) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CodeSystem",
+    "url": "https://www.codesystemweb.com.br",
+    "logo": "https://www.codesystemweb.com.br/img/logo.png",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+55-51-99487-9614",
+      "contactType": "customer service",
+      "areaServed": "BR",
+      "availableLanguage": "Portuguese"
+    },
+    "sameAs": [
+      "https://www.instagram.com/codesystemweb",
+      "https://www.facebook.com/"
+    ]
+  }
+  </script>
+
 </head>
+
 
 <body>
 
